[package]
name = "wiiunhide"
version = "0.1.0"
authors = ["bsdf <EMAILBEN145@gmail.com>"]
edition = "2018"
description = "hide/unhide your hd to get rid of the wiiu nag screen"
readme = "README.org"
license-file = "LICENSE"
keywords = ["wiiu", "u-stealth", "homebrew"]
categories = ["command-line-utilities"]
repository = "https://github.com/bsdf/wiiunhide"

[dependencies]
structopt = { version = "0.3", default-features = false }
